--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -1,11 +1,16 @@
-@book{womak:lean-thinking,
-    author  = {James P. Womack, Daniel T. Jones},
-    title   = {Lean Thinking, Second Editon},
-    publisher = {Simon \& Schuster, Inc.},
-    year    = {2010}
-}
+%@book{womak:lean-thinking,
+%    author  = {James P. Womack, Daniel T. Jones},
+%    title   = {Lean Thinking, Second Editon},
+%    publisher = {Simon \& Schuster, Inc.},
+%    year    = {2010}
+%}
 
 @online{site:agile-manifesto,
     title   = {Manifesto Agile},
-    url     = {http://agilemanifesto.org/iso/it/}
+    url     = {https://agilemanifesto.org/}
+}
+
+@online{site:wikipedia,
+    title   = {Wikipedia},
+    url     = {https://www.wikipedia.org/}
 }
