--- a/src/capitoli/capitolo-1.tex
+++ b/src/capitoli/capitolo-1.tex
@@ -9,22 +9,14 @@
 
 %**************************************************************
 \section{Profilo aziendale}
-    \textbf{Zextras s.r.l.} nasce a Torri di Quartesolo(VI) nel 2011 come estensione di \textbf{Studio Storti s.r.l.} che opera, dal 1997, nel campo delle soluzioni \gls{opensg}. Sin dall'inizio, l'obiettivo principale di questa società era quello di estendere \gls{zcsg} \textit{Open Source Edition}, uno dei più diffusi strumenti collaborativi per aziende e pubbliche amministrazioni, aggiungendo nuove funzionalità. \\
+    \textbf{Zextras s.r.l.} nasce a Torri di Quartesolo (VI) nel 2011 come estensione di \textbf{Studio Storti s.r.l.} che opera, dal 1997, nel campo delle soluzioni \gls{opensg}. Sin dall'inizio, l'obiettivo principale di questa società era quello di estendere \gls{zcsg} \textit{Open Source Edition}, uno dei più diffusi strumenti collaborativi per aziende e pubbliche amministrazioni, aggiungendo nuove funzionalità. \\
     Nel corso degli anni è nata e cresciuta \textbf{Zextras Suite}, una raccolta di estensioni che permettono di arricchire \gls{zcsg} con nuove funzionalità utili nel suo utilizzo in ambito professionale.
     Le soluzioni proposte da \textbf{Zextras} con i sui prodotti vengono da subito apprezzate da \textbf{Synacor}, l'azienda che sviluppa e mantiene \gls{zcsg}, la quale decide di includere parte del suo codice nella versione \gls{opensg}. Attualmente i prodotti sviluppati dall'azienda vengono utilizzati da più di 100 milioni di utenti in tutto il mondo.
-
-    \begin{figure}[h]
-        \centering
-        \includegraphics[width=0.55\textwidth]{immagini/zextras_logo.png}
-        \caption{Logo Zextras}
-        \textbf{Fonte:} Zextras
-        \label{fig: Logo Zextras}
-    \end{figure}
 
 \section{Dominio applicativo}
     \subsection{Zimbra Open Source Edition}
         \textbf{Zextras}, come già accennato, è nata con l'obiettivo di creare nuovi contenuti per \gls{zcsg} facendone quindi il suo \textit{core business}.
-        \textbf{Zimbra} è un software collaborativo di gruppo adatto a coordinare e supportare l'attività lavorativa di aziende, pubbliche amministrazioni e altri enti. I principali servizi offerti da questo \textit{software} sono i seguenti:
+        \gls{zcsg} è un software collaborativo di gruppo adatto a coordinare e supportare l'attività lavorativa di aziende, pubbliche amministrazioni e altri enti. I principali servizi offerti da questo \textit{software} sono i seguenti:
         \begin{itemize}
             \item posta elettronica;
             \item gestione calendari condivisi e organizzazione eventi;
@@ -39,26 +31,27 @@
             \item \textbf{Zimbra Network Edition}: è una versione a pagamento che offre alcune funzionalità \gls{closedg} tra cui un protocollo per la sincronizzazione di calendario e contatti e maggiori funzionalità per gli amministratori.
         \end{itemize}
         
-        \begin{figure}[h]
-            \centering
-            \includegraphics[width=0.55\textwidth]{immagini/zimbra_logo.png}
-            \caption{Logo Zimbra}
-            \textbf{Fonte:} \href{https://www.zimbra.com/}{zimbra.com}
-            \label{fig: Logo Zimbra}
-        \end{figure}
-        
     \subsection{Zextras Suite}
         \textbf{Zextras Suite} è un'insieme di funzionalità che permettono di aggiungere delle funzionalità a \gls{zcsg} \textit{Open Source Edition} in modo indipendente da quest'ultimo. Ciò permette una configurazione altamente modulare e personalizzabile in base alle necessità dell'utilizzatore. \\
         Questa \textit{suite} offre i seguenti prodotti:
         \begin{itemize}
             \setlength\itemsep{0em}
-            \item \textbf{Powerstore}: sistema di ottimizzazione dei dati che permette il risparmio di memoria sui server \textbf{Zimbra};
+            \item \textbf{Powerstore}: sistema di ottimizzazione dei dati che permette il risparmio di memoria sui server \gls{zcsg};
             \item \textbf{Backup}: motore di \gls{backupg} in \gls{realtimeg};
             \item \textbf{Admin}: strumenti dedicati agli amministratori per la gestione e il monitoraggio dei servizi attivi sull'istanza di \gls{zcsg};
             \item \textbf{Mobile}: gestione e sincronizzazione di posta elettronica, contatti, eventi e calendario su dispositivi mobili tramite protocolli \textit{Exchange} e \textit{EAS 16.0 (ActiveSync)};
             \item \textbf{Chat}: piattaforma di messaggistica istantanea nativamente integrata in \gls{zcsg}, che permette scambio di messaggi e videochiamate;
             \item \textbf{Drive}: piattaforma per la condivisione di file e l'utilizzo di fogli di lavoro condivisi.
         \end{itemize}
+        
+        \begin{figure}[h]
+            \centering
+            \includegraphics[width=0.7\textwidth]{immagini/zextras_suite.png}
+            \caption{Zextras \textit{suite}}
+            \textbf{Fonte: }\href{https://www.zimbra-zextras.pl/}{zimbra-zextras.pl}
+            \label{fig: Zextras suite}
+        \end{figure}
+        
 \section{Struttura interna}
     L'azienda è suddivisa in diversi settori specializzati, ciò permette di avere un organico fornito di tutte le competenze necessarie per raggiungere gli obiettivi prefissati. Di seguito un elenco che illustra i diversi reparti:
     \begin{itemize}
@@ -114,20 +107,18 @@
             \begin{figure}[h]
                 \centering
                 \includegraphics[width=0.7\textwidth]{immagini/starfish.jpg}
-                \caption{Starfish retrospective}
+                \caption{\textit{Starfish retrospective}}
                 \textbf{Fonte: }\href{https://bryanmmathers.com/the-starfish-model/}{bryanmathers.com}
                 \label{fig: Starfish retrospective}
             \end{figure}
             
         \item \textbf{Backlog Refinement}: questa attività, svolta durante lo \textit{Sprint Planning}, consiste nel controllare che tutti gli \textit{item} presenti nel \textit{Product Backlog} siano pronti per essere selezionati e inseriti nello \textit{Sprint Backlog}. Ne vengono rivisti i contenuti, le priorità, le persone assegnate per il loro svolgimento e se necessario, vengono suddivisi in \textit{\gls{taskg}} più piccoli o inclusi in altri già esistenti.
     \end{itemize}
-
-\newpage
     
     \begin{figure}[h]
         \centering
         \includegraphics[width=1\textwidth]{immagini/scrum.jpg}
-        \caption{Scrum flow}
+        \caption{Scrum \textit{flow}}
         \textbf{Fonte:} \href{https://www.ics.ie/news/view/1653}{ICS}
         \label{fig: Scrum flow}
     \end{figure}
@@ -139,10 +130,10 @@
         \item \textbf{\gls{zcsg}}: offre, tra i tanti servizi, il calendario per la gestione degli eventi interni all'azienda, per esempio le riunioni e la possibilità di lavorare su documenti condivisi, per esempio i fogli di calcolo utilizzati per il tracciamento delle ore durante lo \textit{Sprint Planning} come descritto nella sezione precedente. 
     \end{itemize}
 
+\newpage
+
 \subsection{Documentazione}
     La documentazione di tutti i team di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textbf{Confluence} sviluppato da \textbf{Atlassian}, il quale offre un editor di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
-    
-\newpage
 
 \subsection{Configurazione}
 Gli strumenti per il versionamento del codice utilizzati sono i seguenti:
@@ -158,9 +149,27 @@ Per lo sviluppo di nuove funzionalità viene utilizzato un \textit{\gls{workflow
     \item \textit{Pull request} per effettuare il \textit{merge} del codice sul \textit{branch master}, nella quale vengono inseriti alcuni membri del team come revisori, al fine di effettuare una \textit{\gls{codereviewg}} la quale permette di verificare che il codice sia in linea con gli standard di qualità.
     \item Dopo aver messo a punto le correzioni segnalate nella \textit{\gls{codereviewg}} e aver ricevuto l'approvazione dai revisori, avviene il \textit{merge} sul \textit{branch master}.
 \end{enumerate}
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.55\textwidth]{immagini/git_flow.png}
+        \caption{\textit{Gitflow}}
+        \textbf{Fonte:} \href{https://www.codewall.co.uk/a-git-flow-explainer-how-to-tutorial/}{codewall.co.uk}
+        \label{fig: Gitflow}
+    \end{figure}
+
+\newpage
 
 \subsection{Verifica}
-La verifiche che permettono di perseguire la qualità di prodotto avviene tramite \textbf{Jenkins}, un \textit{automation server} che supporta la \textit{\gls{cig}} e la \textit{\gls{cdg}}.
-In questo modo è possibile automatizzare il processo di build ad ogni commit sul \textit{\gls{repositoryg}} e rilasciare quest'ultima in ambiente di produzione.
-\textbf{Jenkins} permette di aggiungere altre funzionalità al processo di build, per esempio l'analisi statica del codice e la rilevazione di alcune tipologie di \textit{\gls{bugg}}, rendendolo quindi uno strumento molto flessibile e personalizzabile.
-Prima della verifica automatizzata vengono effettuate le \textit{\gls{codereviewg}} come descritto nella sezione precedente.
+    La verifiche che permettono di perseguire la qualità di prodotto avvengono tramite \textbf{Jenkins}, un \textit{automation server} che supporta la \textit{\gls{cig}} e la \textit{\gls{cdg}}.
+    In questo modo è possibile automatizzare il processo di build ed esecuzione delle varie tipologie di test ad ogni commit sul \textit{\gls{repositoryg}} e rilasciare quest'ultima in ambiente di produzione.
+    \textbf{Jenkins} permette di aggiungere altre funzionalità al processo di build, per esempio l'analisi statica del codice e la rilevazione di alcune tipologie di \textit{\gls{bugg}}, \textit{code coverage} rendendolo quindi uno strumento molto flessibile e personalizzabile.
+    Prima della verifica automatizzata vengono effettuate le \textit{\gls{codereviewg}} come descritto nella sezione precedente.
+    
+
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=1\textwidth]{immagini/ci.png}
+        \caption{\textit{Continuous Integration}}
+        \textbf{Fonte:} \href{https://developers.redhat.com/blog/2017/09/06/continuous-integration-a-typical-process/}{developers.redhat.com}
+        \label{fig: Continuous Integration}
+    \end{figure}
