--- a/src/inizio-fine/bibliografia.tex
+++ b/src/inizio-fine/bibliografia.tex
@@ -13,6 +13,6 @@
 % Stampa i riferimenti bibliografici
 %\printbibliography[heading=subbibliography,title={Riferimenti bibliografici},type=book]
 
-% Stampa i siti web consultati
-%\printbibliography[heading=subbibliography,title={Siti web consultati},type=online]
+%Stampa i siti web consultati
+\printbibliography[heading=subbibliography,title={Siti web consultati},type=online]
 
