--- a/src/main.tex
+++ b/src/main.tex
@@ -105,6 +105,8 @@
 \usepackage{titlesec}
 \titlespacing*{\section}{0pt}{1.1\baselineskip}{\baselineskip}
 
+\titlespacing*{\subsection}{0pt}{1.1\baselineskip}{\baselineskip}
+
 \input{tesi-config}                     % file con le impostazioni personali
 
 %\usepackage[hidelinks]{hyperref}    %clickable ToC
