Capitolo 2 (da finire)

--- a/src/capitoli/capitolo-1.tex
+++ b/src/capitoli/capitolo-1.tex
@@ -86,7 +86,7 @@
             \item \textbf{Riunioni}: per discussioni con tutti i membri (o una parte) del team, è possibile indire delle brevi riunioni.
         \end{itemize}
 
-\subsection{Metodologia di sviluppo}
+\subsection{Metodologia di sviluppo}\label{sec:met_svilpuppo}
     Per sostenere lo sviluppo di software complessi e dalle dimensioni sostanziose, è necessario avere a disposizione una certa flessibilità ed essere pronti a possibili cambiamenti in termini di requisiti, data anche la tiplogia di servizi che l'azienda sviluppa. Per questo motivo \textbf{Zextras} adotta una filosofia \textit{\gls{agileg}}, preferita rispetto a modelli più rigorosi con l'istanziazione di processi molto forti che portano ad una minore capacità di reagire a cambiamenti imminenti. In particolare, la metodologia di sviluppo adottata in azienda è \textit{Scrum}. In seguito descriverò \textit{Scrum} in relazione a come l'azienda lo attua e da quello che concerne la mia esperienza di stage. \\
     Lo sviluppo di un progetto viene suddiviso in fasi, chiamati \textit{Sprint}, la cui durata può variare da una a quattro settimane. In questo caso, la durata dello \textit{Sprint} era di due settimane.
     Ciascuno \textit{Sprint} ha uno o più obiettivi da portare a termine entro la fine di esso.
@@ -112,7 +112,7 @@
                 \label{fig: Starfish retrospective}
             \end{figure}
             
-        \item \textbf{Backlog Refinement}: questa attività, svolta durante lo \textit{Sprint Planning}, consiste nel controllare che tutti gli \textit{item} presenti nel \textit{Product Backlog} siano pronti per essere selezionati e inseriti nello \textit{Sprint Backlog}. Ne vengono rivisti i contenuti, le priorità, le persone assegnate per il loro svolgimento e se necessario, vengono suddivisi in \textit{\gls{taskg}} più piccoli o inclusi in altri già esistenti.
+        \item \textit{\textbf{Backlog Refinement}}: questa attività, svolta durante lo \textit{Sprint Planning}, consiste nel controllare che tutti gli \textit{item} presenti nel \textit{Product Backlog} siano pronti per essere selezionati e inseriti nello \textit{Sprint Backlog}. Ne vengono rivisti i contenuti, le priorità, le persone assegnate per il loro svolgimento e se necessario, vengono suddivisi in \textit{\gls{taskg}} più piccoli o inclusi in altri già esistenti.
     \end{itemize}
     
     \begin{figure}[h]
@@ -135,7 +135,7 @@
 \subsection{Documentazione}
     La documentazione di tutti i team di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textbf{Confluence} sviluppato da \textbf{Atlassian}, il quale offre un editor di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
 
-\subsection{Configurazione}
+\subsection{Configurazione}\label{sec:configurazione}
 Gli strumenti per il versionamento del codice utilizzati sono i seguenti:
 \begin{itemize}
     \item \textbf{Git}: sistema di versionamento;
