--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -53,7 +53,7 @@
 
 \newglossaryentry{ssog}
 {
-    name=\glslink{sso}{SSO},
+    name=\glslink{sso}{SSO (Single Sign-On)},
     text=Single Sign-On,
     sort=sso,
     description={Si tratta di un sistema di autenticazione che permette ad un utente di effettuare un'unica autenticazione, valida per più servizi e/o risorse ai quali è abilitato. Questo permette all'utente di avere un'unica credenziale valida per più servizi indipendenti}
@@ -231,6 +231,22 @@
     text=cloud,
     sort=cloud,
     description={In informatica si tratta di un errore nel software che produce risultati inattesi}
+}
+
+\newglossaryentry{demog}
+{
+    name=\glslink{demog}{Demo},
+    text=demo,
+    sort=demo,
+    description={dimostrazione di in tempo reale di un prodotto, in questo caso di un \textit{software}}
+}
+
+\newglossaryentry{containerg}
+{
+    name=\glslink{containerg}{Container},
+    text=container,
+    sort=container,
+    description={un \textit{Docker} \textit{container} è un'unità \textit{software} che contiene un ambiente di esecuzione completo di librerie, dipendenze e configurazioni che è in grado di essere eseguito in modo sicuro e deterministico in altri ambienti \textit{Docker} ospitati su diverse macchine}
 }
 
 
