--- a/src/tesi-config.tex
+++ b/src/tesi-config.tex
@@ -37,6 +37,9 @@
 % Data discussione
 \newcommand{\myTime}{26-02-2020}
 
+% Section reference
+\newcommand{\secref}[1]{\S\ref{#1}}
+
 
 %**************************************************************
 % Impostazioni di impaginazione
